# cmshiftAI

./: .cursorrules  .gitignore  BRANDING_TRACKER.md  CONTRIBUTING.md  LICENSE.txt  README.md  benchmark-results.json  claude.md  package-lock.json  package.json  product.json
.cursor/: mcp.json
.cursor/rules/: cmdshiftai-rules.mdc
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
docs/: RUST_FILE_SYSTEM_PROVIDER.md
resources/server/: manifest.json
rust-components/: Cargo.toml  build.rs  cmdshiftai_core.darwin-arm64.node  cmdshiftai_core.node  index.d.ts  index.js  package-lock.json  package.json
rust-components/benchmarks/: file_operations.bench.js
rust-components/src/: lib.rs  performance_monitor.rs
rust-components/src/ai_orchestrator/: mod.rs
rust-components/src/file_operations/: mod.rs
rust-components/src/performance_monitor/: mod.rs
rust-components/src/search_engine/: mod.rs
scripts/: benchmark-file-ops.js  build-release.sh  build-rust.js  code.sh  dev.sh  first-run.sh  memory-test.js  run-all-tests.sh  test-rust-file-provider.js  validate-cmdshiftai.sh  validate-performance.js  validate-rust-integration.js
src/vs/code/electron-main/: app.ts
src/vs/platform/files/node/: rustFileSystemProvider.ts  rustFileSystemProviderRegistration.ts
src/vs/workbench/contrib/performance/: README.md  performance.contribution.ts
src/vs/workbench/contrib/performance/browser/: performanceDashboard.ts  performanceDevTools.ts  performanceStatusBar.ts  performanceView.ts
src/vs/workbench/contrib/performance/common/: performance.ts  (+2 more)
src/vs/workbench/electron-browser/: desktop.main.ts
test/integration/: rustProvider.test.ts
test/unit/electron/: index.js
test/utils/: testHelpers.ts
